Fix logo and menu layout on mobile #22

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -58,6 +58,10 @@ html[data-theme="dark"] {
   height: 3.5rem;
 }
 
+.navbar-sidebar .navbar__logo {
+  height: 2rem;
+}
+
 .footer {
   border-top: 1px solid var(--ifm-color-emphasis-200);
 
